fixed form z-index, replace contact p tags with anchor tags

--- a/footer.css
+++ b/footer.css
@@ -39,13 +39,19 @@
 	flex: 2;
 }
 
-.footer-contact p {
+.footer-contact a {
 	display: flex;
 	min-width: fit-content;
 	gap: .7rem;
+	color: #fff;
+	text-decoration: none;
 	flex: 1;
 	margin-bottom: 15px;
 	font-size: 14px;
+}
+
+.footer-contact a:hover {
+	text-decoration: 1px solid underline;
 }
 
 .footer-social-icons {
